# byte-patrol

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  INSTALL.md  README.md  main.py  pyproject.toml  setup.cfg  test_file.py
src/api/: .env.example  config.py  constants.py  models.py  server.py
src/api/middleware/: __init__.py  auth.py  logging.py
src/api/routes/: webhooks.py
src/api/services/: code_review.py  github.py
src/byte_patrol/: .env.example  cli.py  config.py  main.py  request_counter.py
src/byte_patrol/ai_connector/: __init__.py  service.py
src/byte_patrol/git_handler/: __init__.py  commit_extractor.py
src/byte_patrol/prompt_engine/: __init__.py  context_manager.py  example_usage.py  prompt_templates.py
src/byte_patrol/ui/: __init__.py  display.py
tests/: test_cli.py  test_main.py
