[project]
name = "byte-patrol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "langchain-openai>=0.3.14",
    "langchain>=0.3.24",
    "python-dotenv>=1.1.0",
    "click>=8.1.7",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.3",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "PyJWT[crypto]>=2.8.0",
    "httpx>=0.27.0",
    "langchain-google-genai>=2.1.4",
]

[project.scripts]
"bp" = "byte_patrol.cli:main"
"byte-patrol-hook" = "byte_patrol.pre_commit_hook:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["byte_patrol*"]

[tool.uv]
dev-dependencies = [
    "ipdb>=0.13.13",
    "pytest>=8.3.5",
]
